--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="campo">
               <label for="nome">Nome</label>
               <input type="text" name="nome" id="nome" />
-              <label for="sobrenome">Sobrenome"make the L"</label>
+              <label for="sobrenome">Sobrenome</label>
               <input type="text" name="sobrenome" id="sobrenome" />
           </div>
         </fieldset>
